{
    "name": "GameInputActions",
    "maps": [
        {
            "name": "Main",
            "id": "d7ed23bc-02b3-4c9d-9b21-b4693b226a0c",
            "actions": [
                {
                    "name": "FirstTouch",
                    "type": "Button",
                    "id": "c1fd3ab6-648f-4cd1-9857-5100e3d99557",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "52799365-2dcf-420d-a37e-6f7a6ef69145",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f190f08e-eeb1-48e6-a28a-0f7bd97438e5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a547d1f-984f-41b0-a40c-d7585f5b866b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FirstTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efc4d360-d57c-4c2e-8f0b-94f6a60fafd2",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "82bb13aa-69cb-4642-9a7a-0d644235d736",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}